--- a/src/scss/menu-item.scss
+++ b/src/scss/menu-item.scss
@@ -15,6 +15,7 @@
     &.marginAuto {
       position: absolute;
       top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
     }
   }
